refactoring : 전체 코드 리펙토링